WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127540
REGRESSION (
r162257
): Assertion failure (should not be reached) in CSSPreloadScanner::tokenize()
https://bugs.webkit.org/show_bug.cgi?id=127540
Summary
REGRESSION (r162257): Assertion failure (should not be reached) in CSSPreload...
mitz
Reported
2014-01-23 20:57:19 PST
<
rdar://problem/15875326
> The ASSERT_NOT_REACHED() in CSSPreloadScanner::tokenize() is being hit frequently.
Attachments
Check for the DoneParsingImportRules state before tokenizing the first character
(1.46 KB, patch)
2014-01-23 21:02 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-01-23 21:02:21 PST
Created
attachment 222073
[details]
Check for the DoneParsingImportRules state before tokenizing the first character
mitz
Comment 2
2014-01-23 21:17:47 PST
Fixed in <
http://trac.webkit.org/r162687
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug