<rdar://problem/15875326> REGRESSION (r162257): Assertion failure (should not be reached) in CSSPreloadScanner::tokenize() https://bugs.webkit.org/show_bug.cgi?id=127540

Reviewed by Anders Carlsson.

No new tests, because I could not reproduce the bug reliably and I don’t know how to trigger
it.

* html/parser/CSSPreloadScanner.cpp:
(WebCore::CSSPreloadScanner::scan): Check for the DoneParsingImportRules before tokenizing
a character, not after. This restores the logic from before r162257.



Canonical link: https://commits.webkit.org/145557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162687 268f45cc-cd09-0410-ab3c-d52691b4dbfc